2014-10-14  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Only match $directory, not *${directory}* when the
	user passes the --directory option. Reported by Sergey Alyoshin.

2014-10-14  Ben Elliston  <bje@gnu.org>

	* lib/dejagnu.exp (host_execute): Remove buffer_full check. This
	is not the right command keyword -- it is full_buffer. Reported by
	David Malcolm.

2014-07-15  Maciej W. Rozycki  <macro@mips.com>
	    Maciej W. Rozycki  <macro@codesourcery.com>

	* lib/targetdb.exp (add_board_info): New procedure.
	* doc/ref.xml (Add_board_info Procedure): New section.
	(Set_board_info Procedure): Add description.
	(Unset_board_info Procedure): Likewise.
	* doc/user.xml (Board Config File Values): Add `add_board_info'
	reference.  Reorder `gdb_init_command' table rows and remove a
	duplicate entry, reusing it for `gdb_init_commands'.

2014-06-25  Rob Savoye  <rob.savoye@linaro.org>

	* runtest.exp: (lookfor-file): Fix bug were none of the relative
	paths were actually being used for file lookup.

2014-06-06  Ben Elliston  <bje@gnu.org>

	* depcomp, install-sh, missing: Update to latest versions.
	* mkinstalldirs: Remove.
	* Makefile.in: Regenerate.

2014-06-04  Ben Elliston  <bje@gnu.org>

	* Makefile.in: Regenerate with Automake 1.14.1.
	* compile: Add missing file.

2014-06-04  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2014-03-23.
	* config.sub: Likewise.

2014-06-04  Ben Elliston  <bje@gnu.org>

	* aclocal.m4: Regenerate with Automake 1.14.1.
	* configure: Regenerate with Autoconf 2.69.

2014-03-15  Steve Ellcey  <sellcey@mips.com>

	* baseboards/multi-sim.exp (rpath_flags): Add libatomic.so check.

2014-02-23  Steve Ellcey  <sellcey@mips.com>
	    Richard Sandiford  <rdsandiford@googlemail.com>

	* config/sim.exp (sim_exec): New.
	(sim_file): New.

2013-12-08  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/dg.exp (dg-test): Don't put the expected and actual output
	of a pattern test in the test name; send it to the log instead.
