@@ -1,3 +1,14 @@
+2014-10-24  Steve Ellcey  <sellcey@mips.com>
+
+	* dejagnu.h (pass): Make function static as well as inline.
+	(xpass): Ditto.
+	(fail): Ditto.
+	(xfail): Ditto.
+	(untested): Ditto.
+	(unresolved): Ditto.
+	(note): Ditto.
+	(totals): Ditto.
+
 2014-10-14  Ben Elliston  <bje@gnu.org>
 
 	* runtest.exp: Only match $directory, not *${directory}* when the
